appId: com.intent.app
---
- tapOn: "Avoiding"
- tapOn: "5 min"
- tapOn: "Rescue Me"
- assertVisible: "Finish Early"
